# brainf-ck.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: interpreter.rs  jit_dynasm.rs  jit_plain.rs  main.rs  numwarp.stdout
src/jit/: asm.rs  dynasm.rs  machine.rs  mod.rs  plain.rs
src/jit/aarch64/: asm.rs  mod.rs
src/jit/x86_64/: asm.rs  machine.rs  mod.rs
